--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   This blog is a test for github website
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: blaberingmonk # DO NOT include the @ character, or else the build will fail!
+github_username:  vikasFid # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
